--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://SaswatGit.github.io/React-Calendar-Time-App",
   "name": "react-calendar",
   "version": "0.1.0",
   "private": true,
